expose-elastic-search.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-microk8s-controller
  namespace: ingress
spec:
  selector:
    matchLabels:
      name: nginx-ingress-microk8s
  template:
    spec:
      containers:
      - name: nginx-ingress-microk8s
        ports:
        - containerPort: 80
        - name: proxied-tcp-9200
          containerPort: 9200
          hostPort: 9200
          protocol: TCP
