kibana-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: 'put actual service name here'
          servicePort: 5601
